# django_fakemin

./: MANIFEST.in  README.rst  setup.cfg
django_fakemin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fakemin/: __init__.py  apps.py  example.py  factory.py  inputs.py
fakemin/management/commands/: fakemin.py
